fixes alignment

--- a/src/index.css
+++ b/src/index.css
@@ -66,11 +66,11 @@ code {
   color:#eceeef;
   font-size:16px;
   display:inline-block;
-  line-height:44px;
+  line-height:24px;
   width:25px;
   height:25px;
   text-align:center;
-  margin-right:8px;
+  margin-right:10px;
   border-radius:100%;
   -webkit-transition:all .2s linear;
   -o-transition:all .2s linear;
@@ -79,7 +79,6 @@ code {
 
 .social-icons.size-sm a
 {
-  line-height:34px;
   height:34px;
   width:34px;
   font-size:14px;
